# experiments

./: .gitmodules  LICENSE  experiments.code-workspace
.github/workflows/: chromatic.yml  main.yml  push.yml
assembly/test/: justfile  test.s
bit/my-hello-world/: .bitmap  pnpm-lock.yaml  workspace.jsonc
bit/my-hello-world/scope-name/get-hello-world/: get-hello-world.spec.ts  get-hello-world.ts
bit/my-hello-world/scope-name/hello-world-app/: hello-world-app.app-root.tsx
bit/my-hello-world/scope-name/ui/hello-world/: hello-world.spec.tsx  hello-world.tsx
bit/use-hello-world/: .npmrc  next.config.js  package.json
bit/use-hello-world/src/pages/: index.tsx
github-workflow-scripts/: push.yml
golang/: go.work
golang/fuzz/: main.go  reverse_test.go
golang/generics/: main.go
golang/gowebexamples/hello-world/: go.mod  main.go
golang/greetings/: greetings.go
golang/hello/: hello.go
golang/snippetbox/: go.mod  main.go
golang/tutorials/fuzz/: reverse_test.go
golang/tutorials/generics/: main.go
golang/tutorials/greetings/: greetings_test.go
golang/web-service-gin/: main.go
graphql-federation/odyssey-voyage-I/: .gitignore
graphql-federation/odyssey-voyage-I/client/src/: index.js
graphql-federation/odyssey-voyage-I/router/: router-config.yaml  supergraph-config.yaml  supergraph-schema.graphql
graphql-federation/odyssey-voyage-I/subgraph-locations/: index.js  package-lock.json  package.json
graphql-federation/odyssey-voyage-I/subgraph-reviews/: package-lock.json  package.json  resolvers.js
graphql-federation/retail-supergraph/: router-config-dev.yaml
ipc-bench/results/: reproduce.sh
node/sea/: .gitignore
pixi-js/: package.json  pnpm-lock.yaml  server.ts  tsconfig.browser.json  tsconfig.json
pixi-js/src/: script.ts  server.ts
pixi-js/static/: index.html  pixi-script.js
pixi-js/static/js/: script.js  script.js.map
poetry-demo/: pyproject.toml
pydantic-demo/: pyproject.toml
pydantic-demo/pydantic_demo/: dsp-config.json  main.py
pyqt/: pyproject.toml
pyqt/pyqt/: app.py
python-qt/: pyproject.toml
python-qt/python-qt/: app.py
python-qt/python_qt/: .gitignore  app.py
qtquick-demo/: pyproject.toml
qtquick-demo/qtquick_demo/: main.py  main.qml
react-spectrum/: react-spectrum.code-workspace
react-spectrum/react-spectrum-next-app/: next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
react-spectrum/react-spectrum-next-app/src/app/: app.tsx  layout.tsx  page.tsx
react-spectrum/react-spectrum-next-app/src/app/components/: CustomForm.tsx
react-spectrum/react-spectrum-next-app/src/components/: ReactAriaComponentsForm.tsx  ReactSpectrumForm.tsx
react-spectrum/react-spectrum-next-app/src/utils/: cn.ts
react-ui-library/: .eslintrc.cjs  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
react-ui-library/.husky/: pre-commit
react-ui-library/src/components/: HelloWorld.tsx  index.ts
ruby/: script.rb
rxpy-demo/: pyproject.toml
rxpy-demo/rxpy_demo/: main.py
storybook/example-app/: package.json
storybook/example-app/.storybook/: main.js  preview.js
storybook/example-app/src/: App.js
storybook/example-app/src/components/: UserItem.js  UserItem.stories.js  UserList.js  UserList.stories.js
storybook/learnstorybook-design-system/: CHANGELOG.md  package.json
storybook/learnstorybook-design-system/.github/workflows/: chromatic.yml
storybook/learnstorybook-design-system/.storybook/: main.js  preview.js
storybook/learnstorybook-design-system/src/: Avatar.js
storybook/taskbox/.storybook/: main.js
storybook/taskbox/src/components/: InboxScreen.stories.jsx  Task.jsx  TaskList.jsx
vite-app/: .npmrc  package.json  pnpm-lock.yaml
vite-app/src/: App.tsx
websockets/client/: pnpm-lock.yaml
websockets/client/src/: App.jsx
websockets/server/: package.json  pnpm-lock.yaml
websockets/server/public/: data.json
websockets/server/src/: server.js
xstate/: package.json  pnpm-lock.yaml  tsconfig.json
xstate/src/: index.ts
