[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Syed Taqi Haider <sh13226@my.bristol.ac.uk>"]
readme = "README.md"
packages = [{ include = "poetry_demo" }]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
