[tool.poetry]
name = "pyqt"
version = "0.1.0"
description = "PyQt6 demo application"
authors = ["syedtaqi95 <sh13226@my.bristol.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.5.0"

[tool.poetry.scripts]
app = "pyqt.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
